# selium

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  GAP_ANALYSIS.md  README.md  conversation.txt  exploration-remote-cli-architecture.md
crates/abi/: Cargo.toml
crates/abi/src/: context.rs  contract.rs  contract_codec.rs  error.rs  handles.rs  hostcalls.rs  identity.rs  lib.rs  network.rs  process.rs  ptr.rs  queue.rs  session.rs  shm.rs  singleton.rs  storage.rs  time.rs  usage.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  daemon_client.rs  main.rs  output.rs  tests.rs
crates/cli/tests/: cli_targeted_launch.rs  cluster.rs  control_plane_agent.rs  control_plane_topology.rs  discovery_usage_smoke.rs  goal1_cluster.rs  goal2_runtime_topology.rs  goal3_cli_targeted_launch.rs  goal4_guest_io.rs  guest_io.rs  inventory_bootstrap_replay.rs  runtime_topology.rs
crates/cli/tests/support/: cluster_harness.rs  mod.rs
crates/control-plane/agent/: Cargo.toml
crates/control-plane/agent/src/: lib.rs
crates/control-plane/api/: Cargo.toml
crates/control-plane/api/src/: conformance.rs  lib.rs  model.rs  refs.rs  registry.rs  state.rs
crates/control-plane/api/tests/: lib.rs  python_contract_codec.py  python_interop.rs
crates/control-plane/protocol/: Cargo.toml
crates/control-plane/protocol/src/: lib.rs
crates/control-plane/runtime/: Cargo.toml
crates/control-plane/runtime/src/: discovery.rs  inventory.rs  lib.rs  values.rs
crates/control-plane/scheduler/: Cargo.toml
crates/control-plane/scheduler/src/: lib.rs
crates/guest/: Cargo.toml
crates/guest/macros/: Cargo.toml
crates/guest/macros/src/: entrypoint.rs  lib.rs
crates/guest/macros/tests/: integration.rs
crates/guest/src/: abi.rs  async.rs  bindings.rs  driver.rs  durability.rs  error.rs  guest_log.rs  io.rs  lib.rs  mailbox.rs  native.rs  network.rs  process.rs  queue.rs  rpc.rs  session.rs  shm.rs  storage.rs  time.rs
crates/guest/src/abi/: mod.rs  time.rs
crates/guest/src/async/: mod.rs
crates/guest/src/async_/: background.rs  future.rs  mod.rs  shutdown.rs
crates/guest/src/discovery/: mod.rs
crates/guest/src/init/: mod.rs
crates/guest/src/scheduler/: mod.rs
crates/guest/src/supervisor/: mod.rs
crates/host/: Cargo.toml
crates/host/src/: async_host.rs  async_host_functions.rs  capabilities.rs  error.rs  guest.rs  hostcalls.rs  kernel.rs  lib.rs  main.rs  metering.rs  network.rs  queue.rs  storage.rs  time.rs
crates/host/src/abi_hostcalls/: caps.rs  context.rs  mod.rs  network.rs  queue.rs  storage.rs  time.rs
crates/io/consensus/: Cargo.toml
crates/io/consensus/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: guest_error.rs  lib.rs  registry.rs
crates/kernel/src/async/: futures.rs
crates/kernel/src/hostcalls/: mod.rs  network.rs  process.rs  queue.rs  session.rs  shm.rs  singleton.rs  storage.rs  time.rs
crates/kernel/src/services/: mod.rs  queue_service.rs  session_service.rs  shared_memory_service.rs  singleton_service.rs  time_service.rs
crates/kernel/src/spi/: mod.rs  module_repository.rs  network.rs  process.rs  queue.rs  session.rs  shared_memory.rs  singleton.rs  storage.rs  time.rs  usage.rs  wake_mailbox.rs
crates/runtime/: Cargo.toml
crates/runtime/adaptors/microvm-adaptor/: Cargo.toml
crates/runtime/adaptors/spi/: Cargo.toml
crates/runtime/adaptors/wasmtime-adaptor/: Cargo.toml
crates/runtime/network/: Cargo.toml
crates/runtime/network/src/: lib.rs
crates/runtime/service/: Cargo.toml
crates/runtime/src/: certs.rs  config.rs  daemon.rs  kernel.rs  lib.rs  main.rs  modules.rs
crates/runtime/storage/: Cargo.toml
crates/runtime/support/: Cargo.toml
crates/runtime/tests/: foundation_smoke.rs
crates/userland/: Cargo.toml
crates/userland/macros/: Cargo.toml
crates/userland/src/: abi.rs  context.rs  driver.rs  lib.rs  process.rs  queue.rs  session.rs  shm.rs  singleton.rs  time.rs
examples/event-broadcast/: Cargo.toml  README.md
examples/event-broadcast/contracts/: inventory.broadcast.v1.selium
examples/event-broadcast/src/: bindings.rs  lib.rs
examples/pipeline-transform/: Cargo.toml  README.md
examples/pipeline-transform/contracts/: commerce.pipeline.v1.selium
examples/pipeline-transform/src/: bindings.rs  lib.rs
examples/process-supervisor/: Cargo.toml  README.md
examples/process-supervisor/contracts/: orchestration.supervisor.v1.selium
examples/process-supervisor/src/: bindings.rs  lib.rs
examples/rpc-echo-service/: Cargo.toml  README.md
examples/rpc-echo-service/contracts/: messaging.echo.v1.selium
examples/rpc-echo-service/src/: bindings.rs  lib.rs
examples/rust-sdk/: Cargo.toml  README.md
examples/scatter-gather/: Cargo.toml  README.md
examples/scatter-gather/contracts/: pricing.scatter.v1.selium
examples/scatter-gather/src/: bindings.rs  lib.rs
examples/stateful-counter/: Cargo.toml  README.md
examples/stateful-counter/contracts/: stateful.counter.v1.selium
examples/stateful-counter/src/: bindings.rs  lib.rs
modules/control-plane/: Cargo.toml
modules/control-plane/src/: lib.rs  module_spec.rs  tests.rs
modules/discovery/: Cargo.toml
modules/discovery/src/: lib.rs
modules/init/: Cargo.toml
modules/init/src/: lib.rs
modules/routing/: Cargo.toml
modules/routing/src/: lib.rs
modules/scheduler/: Cargo.toml
modules/scheduler/src/: lib.rs
modules/selium-guest-runtime/: Cargo.toml
modules/selium-guest-runtime/.cargo/: config.toml
modules/selium-guest-runtime/src/: error.rs  lib.rs  rpc.rs
selium-guest/: Cargo.toml
selium-guest/src/: async_.rs  error.rs  lib.rs  rpc.rs  shutdown.rs  spawn.rs  wait.rs  yield_.rs
selium-guest/src/async_/: background.rs  future.rs  mod.rs  shutdown.rs  wait.rs  yield_.rs
selium-guest/src/consensus/: mod.rs
selium-guest/src/init/: mod.rs
selium-guest/src/routing/: mod.rs
selium-host/: Cargo.toml
selium-host/src/: async_host.rs  async_host_functions.rs  capabilities.rs  error.rs  guest.rs  handles.rs  hostcalls.rs  kernel.rs  lib.rs  main.rs  metering.rs  network.rs  process.rs  queue.rs  storage.rs  time.rs
(+299 files in other folders)
