[workspace]
resolver = "2"
members = [
  "crates/abi",
  "crates/guest",
  "crates/host",
  "modules/init",
  "modules/consensus",
  "modules/scheduler",
  "modules/discovery",
  "modules/supervisor",
  "modules/routing",
]

[workspace.package]
version = "1.0.0-alpha.7"
edition = "2024"
description = "Next-generation hypervisor"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium"
license = "MPL-2.0"
keywords = ["runtime", "selium", "wasm"]
categories = ["development-tools", "virtualization", "wasm"]

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
parking_lot = { version = "0.12", default-features = false }
rkyv = { version = "0.8", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
wasmtime = { version = "42", default-features = false }
