[workspace]
resolver = "2"
members = []

[workspace.package]
version = "1.0.0-alpha.6"
edition = "2024"
description = "Streaming compute fabric"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium"
license = "MPL-2.0"
keywords = ["data", "etl", "streaming", "wasm", "webassembly"]
categories = ["development-tools", "virtualization", "wasm"]

[workspace.dependencies]
