[workspace]
resolver = "3"
members = [
    "crates/abi",
    "crates/kernel",
    "crates/runtime",
    "crates/guest",
    "crates/guest/macros",
]

[workspace.package]
version = "1.0.0-alpha.6"
edition = "2024"
description = "Streaming compute fabric"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium"
license = "MPL-2.0"
keywords = ["data", "etl", "streaming", "wasm", "webassembly"]
categories = ["development-tools", "virtualization", "wasm"]

[workspace.dependencies]
futures = "0.3"
parking_lot = "0.12"
proc-macro2 = "1.0"
quote = "1.0"
rkyv = { version = "0.8", default-features = false, features = ["bytecheck", "std"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0"
tokio = { version = "1.44", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wasmtiny = { path = "../../../wasmtiny" }
wat = "1.240"
