[package]
name = "selium-guest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
futures = "0.3"
pin-project = "1"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
