[package]
name = "selium-abi"
version.workspace = true
edition.workspace = true
description = "Selium host and guest ABI contracts"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rkyv.workspace = true
thiserror.workspace = true
