[package]
name = "selium"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = [
  "derive",
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage"
] }
quinn = { workspace = true, features = [
  "platform-verifier",
  "runtime-tokio",
  "rustls-ring"
] }
rkyv = { workspace = true }
rustls = { workspace = true, features = ["ring", "std"] }
rustls-pemfile = { workspace = true, features = ["std"] }
selium-abi = { workspace = true }
selium-control-plane-agent = { workspace = true }
selium-control-plane-api = { workspace = true }
selium-control-plane-core = { workspace = true }
selium-control-plane-scheduler = { workspace = true }
selium-control-plane-protocol = { workspace = true }
selium-runtime-support = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
toml = { workspace = true, features = ["parse", "serde", "std"] }

[dev-dependencies]
selium-control-plane-runtime = { workspace = true }
selium-runtime-support = { workspace = true }
