[package]
name = "selium-runtime"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "help", "std"] }
futures-util = { workspace = true, features = ["alloc"] }
libc = { workspace = true }
path-security = { workspace = true }
rcgen = { workspace = true, features = ["crypto", "pem", "ring"] }
rkyv = { workspace = true }
rustls = { workspace = true, features = ["ring", "std"] }
rustls-pki-types = { workspace = true, features = ["std"] }
selium-abi = { workspace = true }
selium-kernel = { workspace = true, features = ["services"] }
tokio = { workspace = true, features = [
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "env-filter",
  "fmt",
  "json",
  "std",
] }
wasmtime = { workspace = true, features = [
  "async",
  "cranelift",
  "runtime",
  "std"
] }
