[package]
name = "selium-userland"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-shear]
ignored-paths = ["macros/tests/**/*.rs"]

[dependencies]
futures = { workspace = true, features = ["alloc", "std"] }
rkyv = { workspace = true }
selium-abi = { workspace = true }
selium-userland-macros = { path = "macros" }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }
