[package]
name = "selium-example-rust-sdk"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1.0"
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
selium-io-core = { path = "../../crates/io/core" }
selium-io-durability = { path = "../../crates/io/durability" }
selium-sdk-rust = { path = "../../crates/sdk/rust" }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
