[package]
name = "selium-example-scatter-gather"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "scatter_gather"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
rkyv = { workspace = true, features = ["std", "bytecheck"] }
selium-abi.workspace = true
selium-guest.workspace = true
