[package]
name = "selium-example-stateful-counter"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "stateful_counter"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
rkyv = { workspace = true, features = ["std", "bytecheck"] }
selium-abi.workspace = true
selium-guest.workspace = true
