[package]
name = "selium-module-control-plane"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
rkyv = { workspace = true }
selium-abi = { workspace = true }
selium-control-plane-api = { workspace = true }
selium-control-plane-protocol = { workspace = true }
selium-control-plane-runtime = { workspace = true }
selium-control-plane-scheduler = { workspace = true }
selium-io-consensus = { workspace = true }
selium-guest = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
selium-control-plane-api = { workspace = true }
