[package]
name = "routing"
version = "1.0.0-alpha.7"
edition = "2024"
description = "Routing guest module for Selium"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium"
license = "MPL-2.0"
keywords = ["runtime", "selium", "wasm", "guest", "routing"]
categories = ["development-tools", "virtualization", "wasm"]

[dependencies]
selium-guest-runtime = { path = "../selium-guest-runtime" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

[lib]
crate-type = ["cdylib", "rlib"]
