[package]
name = "selium-guest-runtime"
version = "1.0.0-alpha.7"
edition = "2024"
description = "Shared runtime library for Selium WASM guest modules"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium"
license = "MPL-2.0"
keywords = ["runtime", "selium", "wasm", "guest"]
categories = ["development-tools", "virtualization", "wasm"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
parking_lot = { version = "0.12", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]
