[package]
name = "selium-control-plane-agent"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
rkyv = { workspace = true }
selium-control-plane-api = { workspace = true }
selium-control-plane-protocol = { workspace = true }
selium-control-plane-scheduler = { workspace = true }
