[package]
name = "selium-control-plane-api"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
rkyv = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
