[package]
name = "selium-control-plane-api"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
prettyplease = "0.2"
proc-macro2 = { workspace = true }
quote = { workspace = true }
rkyv = { workspace = true, features = ["std", "bytecheck"] }
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["full", "parsing"] }
thiserror = { workspace = true, features = ["std"] }

[dev-dependencies]
serde_json = "1.0"
