[package]
name = "selium-control-plane-protocol"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
rkyv = { workspace = true }
selium-abi = { workspace = true }
selium-control-plane-api = { workspace = true }
selium-control-plane-core = { workspace = true }
selium-io-consensus = { workspace = true }
