[package]
name = "selium-control-plane-runtime"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
rkyv = { workspace = true }
selium-abi = { workspace = true }
selium-control-plane-api = { workspace = true }
selium-control-plane-scheduler = { workspace = true }
selium-io-consensus = { workspace = true }
selium-io-tables = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
