[package]
name = "selium-control-plane-scheduler"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rkyv = { workspace = true }
selium-control-plane-api = { workspace = true }
selium-control-plane-protocol = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
