[package]
name = "selium-guest-macros"
version.workspace = true
edition.workspace = true
description = "Selium guest procedural macros"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
selium-guest = { path = ".." }
selium-runtime = { path = "../../runtime" }
tokio.workspace = true
tracing.workspace = true
wat.workspace = true
