[package]
name = "selium-io-consensus"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rkyv = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
